fix for bug 133735: copying anything inside a list pastes as an entire list.  This is backing out part of fix for 62188.  r=akkana; sr=kin; a=asa; adt=jaime